--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13145,6 +13145,7 @@ div#notebook {
 <li><a href="./Fall2025/dcp243_jk2878/writeup.html">Snake-Inspired Game</a> (<a href="https://youtu.be/Gj2DFg01Oc0">video demonstration</a>)</li>
 <li><a href="./Fall2025/jk2582_cjm369_mlh348/index.html">Logic Analyzer</a></li>
 <li><a href="./Fall2025/akk85_dv258_jws434/index.html">Star tracker</a> (<a href="https://youtu.be/mN4AUj1KYqI">video demonstration</a>)</li>
+<li><a href="./Fall2025/md2236_yy2236/index.html">Pandora's Box Epidemic Simulator</a> (<a href="https://youtu.be/46gfggSQE6U">video demonstration</a>)</li>
 </ol>
 
 </div>
