updated appendix on one project

--- a/Projects/Fall2025/yz3545_hy665_qz425/index.html
+++ b/Projects/Fall2025/yz3545_hy665_qz425/index.html
@@ -565,6 +565,8 @@
                 </ul>
                 <p style="margin-bottom:0.5em;font-size:0.98em;color:#555;">Project presentation and report were completed collaboratively by all three members. (Order does not indicate ranking.)</p>
                 <p style="font-weight:500;color:#2a6ebb;">The group approves this report for inclusion on the course website.</p>
+                <p style="font-weight:500;color:#2a6ebb;">The group approves the video for inclusion on the course youtube channel.</p>
+                
                 <h4 id="references">C. References</h4>
                 <ul>
                     <li><a href="https://ece4760.github.io/" target="_blank" rel="noopener noreferrer">ECE 4760/5730 Course Website</a></li>
