--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13127,7 +13127,7 @@ div#notebook {
 <li><a href="./Fall2025/hn347_scz6_ma969/index.html">Flappy Bird</a> (<a href="https://youtu.be/TWBTzghpsnY">video demonstration</a>)</li>
 <li><a href="./Fall2025/mwc87_rry9/index.html">Cornell Tower Defense</a> (<a href="https://youtu.be/jrui2HFuquc">video demonstration</a>)</li>
 <li><a href="./Fall2025/ste27_sz498/website.html">Autonomous Handwriting Robot</a></li>
-<li>MiniSLAM Robot (private upon request)</li>
+<li><a href="./Fall2025/qz426_zt286_ds2489/index.html">MiniSLAM Robot</a> (<a href="https://youtu.be/khKxArOAPUU">video demonstration</a>)</li>
 <li><a href="./Fall2025/iab35_lg634/webpage/main.html">Customizable computer mouse</a></li>
 <li><a href="./Fall2025/ace68_hle37_lag289/ace68_hle37_lag289.html">DigiDrum Airdrums</a> (<a href="https://youtu.be/fSZf4prnDR0">video demonstration</a>)</li>
 <li><a href="./Fall2025/kb593_flp23/index.html">Pico Pasture Cow Herding Simulation</a> (<a href="https://youtu.be/7NQLgskAEZM">video demonstration</a>)</li>
@@ -13146,6 +13146,8 @@ div#notebook {
 <li><a href="./Fall2025/jk2582_cjm369_mlh348/index.html">Logic Analyzer</a></li>
 <li><a href="./Fall2025/akk85_dv258_jws434/index.html">Star tracker</a> (<a href="https://youtu.be/mN4AUj1KYqI">video demonstration</a>)</li>
 <li><a href="./Fall2025/md2236_yy2236/index.html">Pandora's Box Epidemic Simulator</a> (<a href="https://youtu.be/46gfggSQE6U">video demonstration</a>)</li>
+<li><a href="./Fall2025/slw282/index.html">DJ Display Matrix</a></li>
+<li>Distributed Mandelbrot Accelerator</li>
 </ol>
 
 </div>
